[gd_scene load_steps=5 format=2]

[ext_resource path="res://extra/UrlManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/Inspector.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.592157, 0.592157, 0.592157, 1 )

[node name="Inspector" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -93.0
margin_right = 65.0
margin_bottom = 166.0
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
graph_edit = NodePath("../GraphEdit")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 277.0
margin_bottom = 255.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 263.0
margin_bottom = 241.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 253.0
margin_bottom = 2.0
text = "Inspector"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 253.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 7.0
text = "Title: "

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 253.0
margin_bottom = 12.0
size_flags_horizontal = 3
placeholder_text = "Title"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 253.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 5.0
text = "Color frame:    "

[node name="ColorFrame" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_right = 253.0
margin_bottom = 8.0
size_flags_horizontal = 3
color = Color( 0.333333, 0.113725, 0.113725, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 253.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 16.0
margin_bottom = 5.0
text = "Color selected: "

[node name="ColorSelected" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 20.0
margin_right = 253.0
margin_bottom = 8.0
size_flags_horizontal = 3
color = Color( 0.333333, 0.113725, 0.113725, 1 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 253.0
margin_bottom = 48.0
text = "Buttons:"

[node name="UrlManager" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 52.0
margin_right = 253.0
margin_bottom = 80.0

[node name="Links" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 253.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/ColorFrame" to="." method="_on_ColorFrame_color_changed"]
[connection signal="color_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/ColorSelected" to="." method="_on_ColorSelected_color_changed"]
[connection signal="on_pressed" from="MarginContainer/VBoxContainer/UrlManager" to="." method="_on_AddLink_pressed"]
